--- a/Fiappona/res/values/strings.xml
+++ b/Fiappona/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
 
     <string name="app_name">Fiappona</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Ciao mondo!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Fiappona</string>
 
 </resources>
